====================================================================================
ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================

******************************************
CHANGELOG: 3-11-2011
1) Moved pulse generation to pulses.cpp and added header file
2) Added support for DSM2


******************************************
CHANGELOG: 1-11-2011
1) Added changelog file
2) removed -speaker versions from repo
3) removed -speaker compile options from the domake script


******************************************
CHANGELOG: 02-11-2011
1) adding new script called 'er9x-builder.sh' to root folder.
   script cleans up the compile process of all the versions
   and should be easier to extend in the future.
   all 'compile' output ends up in the buildlog folder
   and is only shown if the compile failed.